--- a/react-router-7-prisma/package.json
+++ b/react-router-7-prisma/package.json
@@ -9,7 +9,8 @@
     "typecheck": "react-router typegen && tsc",
     "test": "vitest",
     "db-seed": "prisma db seed",
-    "migrate": "prisma migrate dev"
+    "migrate": "prisma migrate dev",
+    "generate": "prisma generate"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
